--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "jest": "^26.4.2",
     "prettier": "^2.1.2",
+    "react": "^15.3.1",
     "rollup": "^2.28.2",
     "rollup-plugin-peer-deps-external": "^2.2.3",
     "rollup-plugin-typescript2": "^0.27.3",
