--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "jest": "^26.4.2",
     "prettier": "^2.1.2",
-    "react": "^15.3.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1",
     "rollup": "^2.28.2",
     "rollup-plugin-peer-deps-external": "^2.2.3",
     "rollup-plugin-typescript2": "^0.27.3",
     "ts-jest": "^26.4.0",
     "ts-loader": "^8.0.4",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
