--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
+  "repository":"https://github.com/filipecancio/bombonzinho/",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@rollup/plugin-commonjs": "^15.1.0",
@@ -58,6 +59,6 @@
     "test": "jest"
   },
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com/@bombonzinho"
+    "registry":"https://npm.pkg.github.com/@filipecancio"
   }
 }
