--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -25,6 +25,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - run: npm install
     - run: npm login --scope=@filipe.cancio --registry=https://npm.pkg.github.com 
       env:
         username: ${{ github.actor }}
