--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -18,14 +18,15 @@ jobs:
           FIREBASE_CLI_PREVIEWS: hostingchannels
   build-and-push-image:
     runs-on: ubuntu-latest
-    needs: run-npm-test
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - run: npm login --scope=@filipe.cancio --registry=https://npm.pkg.github.com 
-      env:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-        email: filipe.cancio@outlook.com
-    - run: npm run compile && npm publish --access public
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://npm.pkg.github.com/
+          scope: '@filipecancio'
+      - run: npm install
+      - run: npm run compile && npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
